[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/util/state_machine/state_machine.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/worker/bag.gd" type="Script" id=2]
[ext_resource path="res://src/entities/worker/drill.gd" type="Script" id=3]
[ext_resource path="res://assets/texture/worker.png" type="Texture" id=4]
[ext_resource path="res://src/entities/worker/worker.gd" type="Script" id=5]
[ext_resource path="res://assets/texture/drill.png" type="Texture" id=6]
[ext_resource path="res://src/entities/worker/walk.gd" type="Script" id=7]
[ext_resource path="res://src/entities/worker/hurt.gd" type="Script" id=8]
[ext_resource path="res://src/entities/worker/idle.gd" type="Script" id=9]
[ext_resource path="res://src/entities/worker/dead.gd" type="Script" id=10]
[ext_resource path="res://src/entities/worker/air.gd" type="Script" id=11]
[ext_resource path="res://src/entities/worker/attack.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "drill"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[sub_resource type="Animation" id=10]
resource_name = "air"

[sub_resource type="Animation" id=11]
resource_name = "dead"

[sub_resource type="Animation" id=12]
resource_name = "drill"

[sub_resource type="Animation" id=13]
resource_name = "hurt"

[sub_resource type="Animation" id=14]
resource_name = "idle"

[sub_resource type="Animation" id=15]
resource_name = "jump"

[sub_resource type="Animation" id=16]
resource_name = "ladder"

[sub_resource type="Animation" id=17]
resource_name = "walk"

[node name="worker" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="pivot"]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 8, 8 )

[node name="drill" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="drill"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="drill"]
texture = ExtResource( 6 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="drill"]
anims/RESET = SubResource( 18 )
anims/drill = SubResource( 19 )

[node name="bag" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bag"]
shape = SubResource( 3 )

[node name="ladder_detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder_detector"]
shape = SubResource( 1 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 1 )

[node name="state_machine" parent="." instance=ExtResource( 1 )]
start_state = "idle"

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 9 )

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="air" type="Node" parent="state_machine"]
script = ExtResource( 11 )

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource( 12 )

[node name="hurt" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="dead" type="Node" parent="state_machine"]
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air = SubResource( 10 )
anims/dead = SubResource( 11 )
anims/drill = SubResource( 12 )
anims/hurt = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/jump = SubResource( 15 )
anims/ladder = SubResource( 16 )
anims/walk = SubResource( 17 )

[connection signal="body_entered" from="drill" to="drill" method="_on_drill_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
